FIX: images position mobile

--- a/wp-content/themes/gfw-blog/scss/_content.scss
+++ b/wp-content/themes/gfw-blog/scss/_content.scss
@@ -556,6 +556,10 @@ img.alignright {
   padding-left: 30px;
   padding-bottom: 20px;
   background: #FFF;
+  @media (max-width: 480px) {
+    margin-right: -10px;
+    padding-left: 5px;
+  }
 }
 .tag-cloud-gfw {
   margin: 15px auto;
